# FASTQ_Compressor

./: LICENSE  README.md  README_en.md  pyproject.toml  requirements.txt
fastq_compressor/: __init__.py  __main__.py
tests/: recovered_method1.fastq  recovered_method2.fastq
